--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+
         <meta charset="utf-8">
         <meta name="viewport"  content="width=device-width,initial-scale=1.0">
         <title>Helaman Carrillo | WDD 130</title>
+        <meta name="description" content="Helaman Carrillo, WDD 130, create my personal Home Page">
+        <meta name="author" content="Helaman Carrillo">
+        <link rel="stylesheet" href="style/style.css">
 
     </head>
     <body>
@@ -22,6 +26,11 @@
                 Also I like math, I consider it a great way to develop solving problem skills and logical thinking as programming does too. 
                 Lets keep in touch to know you better! </p>
         </main>
+        <aside>
+            <h2>Honduras</h2>
+            <img src="images/honduras ocean1.jpg" alt="Honduran Beach" >
+            <p>Honduras is located in Central America, it has both oceans at its different coast which make it a beutiful paradise for all citizens and visitors. </p>
+        </aside>
         <footer>
             <p>©2023 🧑‍💻 Helaman Carrillo 🧑‍💻 Tegucigalpa, Honduras </p>
         </footer>
