Home Page Enhancement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport"  content="width=device-width,initial-scale=1.0">
         <title>Helaman Carrillo | WDD 130</title>
-        <meta name="description" content="Helaman Carrillo, WDD 130, create my personal Home Page">
+        <meta name="description" content="Helaman Carrillo, WDD 130, create my personal home page">
         <meta name="author" content="Helaman Carrillo">
         <link rel="stylesheet" href="style/style.css">
 
@@ -28,8 +28,8 @@
         </main>
         <aside>
             <h2>Honduras</h2>
-            <img src="images/honduras ocean1.jpg" alt="Honduran Beach" >
-            <p>Honduras is located in Central America, it has both oceans at its different coast which make it a beutiful paradise for all citizens and visitors. </p>
+            <img src="images/hondurasocean1.jpg" alt="Honduran Beach">
+            <p>Honduras is located in Central America, it has both oceans at its different coast which make it a beautiful paradise for all citizens and visitors. </p>
         </aside>
         <footer>
             <p>©2023 🧑‍💻 Helaman Carrillo 🧑‍💻 Tegucigalpa, Honduras </p>
