--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta name="viewport"  content="width=device-width,initial-scale=1.0">
         <title>Helaman Carrillo | WDD 130</title>
-        <meta name="description" content="Helaman Carrillo, WDD 130, create my personal home page">  
+        <meta name="description" content="Helaman Carrillo, WDD 130, create my first personal home page">  
         <meta name="author" content="Helaman Carrillo"> 
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/style.css">                                   
 
     </head>
     <body>
-        <header>
+        <header>                                   
             <nav>
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
