--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <!-- <title></title>-->
     <meta name="description" content="This is a site plan created to provide all the neccessary information and styles for the future website that will be focus to got the attention of all adventure seekers in the rafting world.   . ">
     <meta name="author" content="Helaman Carrillo">
     <link rel="styles" href="styles/site-plan-rafting.css">
@@ -21,26 +21,24 @@
 
         <h3>Audience</h3>
         <p>
-            <ol>
-                <li>Who are the target customers?</li>
-                Based on a general research there are certain types of target audience associated to white water rafting trips, here are some:
-                <ul> 1. Adventure Seekers: White water rafting appeals to individuals who enjoy adrenaline-pumping experiences and outdoor adventures.</ul>
-                <ul> 2. Fitness Enthusiasts: White water rafting requires a certain level of physical fitness and stamina. Therefore, individuals who prioritize fitness and enjoy engaging in physically demanding activities are more likely to participate in this adventure sport.</ul>
-                <ul> 3. Group and Team-Building Participants: White water rafting is often chosen as a group or team-building activity. Companies, organizations, and social groups may organize rafting trips to promote teamwork, communication, and bonding among participants.</ul>
-                <ul> 4. Young Adults and Active Families: White water rafting can be a popular choice for young adults looking for exciting experiences and active families seeking outdoor adventures that can be enjoyed together.</ul>
+                Who are the target customers?
+               Based on a general research there are certain types of target audience associated to white water rafting trips, here are some:</ul>
+                 1. Adventure Seekers: White water rafting appeals to individuals who enjoy adrenaline-pumping experiences and outdoor adventures.</ul>
+                 2. Fitness Enthusiasts: White water rafting requires a certain level of physical fitness and stamina. Therefore, individuals who prioritize fitness and enjoy engaging in physically demanding activities are more likely to participate in this adventure sport.
+                 3. Group and Team-Building Participants: White water rafting is often chosen as a group or team-building activity. Companies, organizations, and social groups may organize rafting trips to promote teamwork, communication, and bonding among participants.
+                 4. Young Adults and Active Families: White water rafting can be a popular choice for young adults looking for exciting experiences and active families seeking outdoor adventures that can be enjoyed together.
                 
 
-                <li>What do they want?</li>
-                <ul>People who participate in white water rafting trips are typically looking for a thrilling adventure, an opportunity to engage in outdoor activities, a chance to test their physical fitness and endurance, and a taste of risk and excitement. White water rafting attracts individuals who enjoy adrenaline-pumping experiences and seek the thrill of navigating through turbulent waters. It is also popular among outdoor enthusiasts who appreciate the beauty of nature and enjoy engaging in challenging and physically demanding activities.</ul>
+               What do they want?
+                People who participate in white water rafting trips are typically looking for a thrilling adventure, an opportunity to engage in outdoor activities, a chance to test their physical fitness and endurance, and a taste of risk and excitement. White water rafting attracts individuals who enjoy adrenaline-pumping experiences and seek the thrill of navigating through turbulent waters. It is also popular among outdoor enthusiasts who appreciate the beauty of nature and enjoy engaging in challenging and physically demanding activities.</ul>
 
-                <li>What do they expect to find or what questions will be answered by them accessing the website?</li>
-                <ul>They are expecting to find the types of trip offer.</ul>
-                <ul>The cost per person/group.</ul>
-                <ul>The different discounts.</ul>
-                <ul>The different rivers in which they will be rafting.</ul>
-                <ul>A map providing the exact location.</ul>
-                <ul>What materials are necessary for the trip.</ul>
-            </ol> 
+                What do they expect to find or what questions will be answered by them accessing the website?
+                They are expecting to find the types of trip offer.
+                The cost per person/group.
+                The different discounts.
+                The different rivers in which they will be rafting.
+                A map providing the exact location.
+                What materials are necessary for the trip. 
         </p>
 
         <h2>Branding</h2>
@@ -52,10 +50,10 @@
 
         <h3>Color Palette</h3>
         <p>
-            <li>primary-color=Midnight Green hex=084C61 </li>
-            <li>secondary-color=Celestial Blue hex=00A1E0</li>
-            <li>accent1-color=Carrot Orange hex=F58F00</li>
-            <li>accent2-color=Sea Green hex=288F4B</li>
+            primary-color=Midnight Green hex=084C61 
+            secondary-color=Celestial Blue hex=00A1E0
+            accent1-color=Carrot Orange hex=F58F00
+            accent2-color=Sea Green hex=288F4B
             Paletter URL: <a href="https://coolors.co/palette/084c61-00a1e0-f58f00-288f4b-ffcb43" target="_blank">https://coolors.co/palette/084c61-00a1e0-f58f00-288f4b-ffcb43</a>
         </p>
 
