--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title></title>-->
+    <title>White Water Rafting Site Plan</title>
     <meta name="description" content="This is a site plan created to provide all the neccessary information and styles for the future website that will be focus to got the attention of all adventure seekers in the rafting world.   . ">
     <meta name="author" content="Helaman Carrillo">
     <link rel="styles" href="styles/site-plan-rafting.css">
@@ -22,8 +22,8 @@
         <h3>Audience</h3>
         <p>
                 Who are the target customers?
-               Based on a general research there are certain types of target audience associated to white water rafting trips, here are some:</ul>
-                 1. Adventure Seekers: White water rafting appeals to individuals who enjoy adrenaline-pumping experiences and outdoor adventures.</ul>
+               Based on a general research there are certain types of target audience associated to white water rafting trips, here are some:
+                 1. Adventure Seekers: White water rafting appeals to individuals who enjoy adrenaline-pumping experiences and outdoor adventures.
                  2. Fitness Enthusiasts: White water rafting requires a certain level of physical fitness and stamina. Therefore, individuals who prioritize fitness and enjoy engaging in physically demanding activities are more likely to participate in this adventure sport.
                  3. Group and Team-Building Participants: White water rafting is often chosen as a group or team-building activity. Companies, organizations, and social groups may organize rafting trips to promote teamwork, communication, and bonding among participants.
                  4. Young Adults and Active Families: White water rafting can be a popular choice for young adults looking for exciting experiences and active families seeking outdoor adventures that can be enjoyed together.
