--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,7 +30,7 @@
                 
 
                What do they want?
-                People who participate in white water rafting trips are typically looking for a thrilling adventure, an opportunity to engage in outdoor activities, a chance to test their physical fitness and endurance, and a taste of risk and excitement. White water rafting attracts individuals who enjoy adrenaline-pumping experiences and seek the thrill of navigating through turbulent waters. It is also popular among outdoor enthusiasts who appreciate the beauty of nature and enjoy engaging in challenging and physically demanding activities.</ul>
+                People who participate in white water rafting trips are typically looking for a thrilling adventure, an opportunity to engage in outdoor activities, a chance to test their physical fitness and endurance, and a taste of risk and excitement. White water rafting attracts individuals who enjoy adrenaline-pumping experiences and seek the thrill of navigating through turbulent waters. It is also popular among outdoor enthusiasts who appreciate the beauty of nature and enjoy engaging in challenging and physically demanding activities.
 
                 What do they expect to find or what questions will be answered by them accessing the website?
                 They are expecting to find the types of trip offer.
