ultimate site plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -82,7 +82,7 @@
         
     </main>
     <footer>
-       <p>©2023 🧑‍💻 Rafting Site Plan 🧑‍💻 Helaman Carrillo 🧑‍💻 WDD 130 </p>  
+       <p>©2023 🥷 Rafting Site Plan 🥷 Helaman Carrillo 🥷 WDD 130 </p>  
     </footer>
     
 </body>
