--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
     <title> Rafting Site Plan</title>
     <meta name="description" content="This is a site plan created to provide all the neccessary information and styles for the future website that will be focus to got the attention of all adventure seekers in the rafting world.   . ">
     <meta name="author" content="Helaman Carrillo">
-    <link rel="styles" href="styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
     <header>
