--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Helaman Carrillo | WDD 130</title>
         <meta name="description" content="Helaman Carrillo, WDD 130, create my first personal home page">  
         <meta name="author" content="Helaman Carrillo"> 
-        <link rel="stylesheet" href="styles/style.css">                                   
+        <link rel="stylesheet" href="styles/styles.css">                                   
 
     </head>
     <body>
