--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">While Water Rafting Siteplan</a>
-                <a href="www.linkedin.com/in/helamancarrillo11">Linkedin Profile</a>
-                <a href=" https://facebook.com" >Facebook Page</a>
+                <a href="https://linkedin.com//in/helamancarrillo11">Linkedin</a>
+                <a href=" https://facebook.com" >Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Helaman Carrillo | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Helaman Carrillo" width="200">
-            <p> Nice to meet you! Welcome to my first Home Page, my name is Helaman Carrillo, I live in Tegucigalpa,Honduras. 
-                My favorite hobbie is playing soccer, my actual position is forward and I enjoy it a lot because it gives me the opportunity to score for the team. 
-                Also I like math, I consider it a great way to develop solving problem skills and logical thinking as programming does too.
-                I consider myself an adventure person, being outside, explore and listen sounds of the wind, animals,etc is something common for me, I like to do it with my friends and family but usually it becomes a more joyful experience with it is only me.
-                Improving myself is a goal for me, I realized that it is impossible to be perfect but I also know that it is possible to a certain grade be not too far away from it, and that is a life process!
-                Reach out me to know you better! 
-            </p>
-            <ul class="box indent">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/tegucigalpa-honduras-temple?lang=eng" target="_blank">Tegucigalpa Honduras Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">Logan Utah Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Honduras</h2>
-            <img src="images/hondurasocean1.jpg" alt="Honduran Beach">
-            <p>Honduras is located in Central America, it has both oceans at its different coast which make it a beautiful paradise for all citizens and visitors. </p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Helaman Carrillo | WDD 130</h1>
+                <img src="images/profile.jpg" alt="Helaman Carrillo" width="200">
+                <p> Nice to meet you! Welcome to my first Home Page, my name is Helaman Carrillo, I live in Tegucigalpa,Honduras. 
+                    My favorite hobbie is playing soccer, my actual position is forward and I enjoy it a lot because it gives me the opportunity to score for the team. 
+                    Also I like math, I consider it a great way to develop solving problem skills and logical thinking as programming does too.
+                    I consider myself an adventure person, being outside, explore and listen sounds of the wind, animals,etc is something common for me, I like to do it with my friends and family but usually it becomes a more joyful experience with it is only me.
+                    Improving myself is a goal for me, I realized that it is impossible to be perfect but I also know that it is possible to a certain grade be not too far away from it, and that is a life process!
+                    Reach out me to know you better! 
+                </p>
+                <ul class="box indent">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/tegucigalpa-honduras-temple?lang=eng" target="_blank">Tegucigalpa Honduras Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">Logan Utah Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Honduras</h2>
+                <img src="images/cascada.webp" alt="Honduran Beach">
+                <p>Honduras is located in Central America, it has both oceans at its different coast which make it a beautiful paradise for all citizens and visitors. </p>
+            </aside>
+        </div>
         <footer>
             <p>©2023 🧑‍💻 Helaman Carrillo 🧑‍💻 Tegucigalpa, Honduras </p>
         </footer>
