--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,20 +30,42 @@
                 </p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, assumenda qui, quos inventore iusto id, deleniti voluptate distinctio nam illo repellendus? Nulla vero quia cumque at et earum modi magnam?
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur autem molestias magnam, mollitia ratione non, nisi iusto id similique explicabo laboriosam quos ullam a quia beatae provident dolores maxime commodi.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, minus saepe? Reiciendis quaerat voluptas libero illum nemo minus, sit voluptate eos labore, odit, nulla inventore error minima explicabo debitis corrupti!
             </p>
+            <img src="images/historyimg.jpg" alt="Beautiful waters">
+            <p id="secondp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, assumenda qui, quos inventore iusto id, deleniti voluptate distinctio nam illo repellendus? Nulla vero quia cumque at et earum modi magnam?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur autem molestias magnam, mollitia ratione non, nisi iusto id similique explicabo laboriosam quos ullam a quia beatae provident dolores maxime commodi.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, minus saepe? Reiciendis quaerat voluptas libero illum nemo minus, sit voluptate eos labore, odit, nulla inventore error minima explicabo debitis corrupti!
+            </p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You</h2>
-            <img src="images/1.jpg" alt="Water Rafting">
-            <img src="images/2.jpg" alt="Teamwork">
-            <img src="images/cambio3.jpg" alt="Beautiful Landscapes">
-            <img src="images/4.jpg" alt="Concentration">
-            <img src="images/5.jpg" alt="Adventure">
+            <figure class="first">
+                <img src="images/1.jpg" alt="Water Rafting">
+                <figcaption>The Roar River</figcaption>
+            </figure>
+            <figure id="seconddd">
+                <img  src="images/2.jpg" alt="Teamwork">
+                <figcaption>Our Team</figcaption>
+            </figure>
+            <figure id="third">
+                <img  src="images/cambio3.jpg" alt="Beautiful Landscapes">
+                <figcaption>The Rocks Rapid</figcaption>
+            </figure>
+            <figure id="fourth">
+                <img  src="images/remplazo4.jpg" alt="Concentration">
+                <figcaption>The Bullet River</figcaption>
+            </figure>
+            <figure id="fifth">
+                <img  src="images/5.jpg" alt="Adventure">
+                <figcaption>The Head Breaker Rapid</figcaption>
+            </figure> 
+            
+           
         </section>
     </main>
     <footer>
