--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This document will have all the information necessary to refer about our programs, location, method of communication, etc.">
     <meta name="author" content="Helaman Carrillo">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About Us</title>
+    <title>Roaring Rapids Rafting About Us</title>
 </head>
 <body>
     <header>
