--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quiz Form">
+    <meta name="author" content="Helaman Carrillo">
     <link rel="stylesheet" href="styles/quiz.css">
     <title> Basic HTML and CSS Quiz</title>
 </head>
