last commit contact

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,16 +88,16 @@
         <h2 class="h23">Contact Us</h2>
 
         <div>
-            <form class="wet">
+            <form class="form">
 
-                <div class="wat">
+                <div class="div">
                     <label for="username">1. Username</label><br>
                     <input type="text" id="username" name="username"><br><br>
 
                 <!--</div>-->
 
                 <!--<div>-->
-                    <label for="email">2. Email</label><br>
+                    <label for="email">2.Email</label><br>
                     <input type="text" id="email" name="email"><br><br>
                 <!--</div>-->
 
