--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,14 +26,14 @@
 
             <article id="house">
                 <figure>
-                    <img id="img" src="images/housesymbol.jpg" alt="House Symbol" width="60"><br><br><br><br>
+                    <img src="images/housesymbol.jpg" alt="House Symbol" width="60"><br><br><br><br>
                     <figcaption> 5961 State Route 97 Narrowsburg, NY</figcaption>
                 </figure>
             </article>
 
             <article id="phoone">
                 <figure>
-                    <img id="img" src="images/phone.jpg" alt="Phone Symbol" width="78"><br><br><br>
+                    <img src="images/phone.jpg" alt="Phone Symbol" width="78"><br><br><br>
                     <figcaption>+212-226-3966</figcaption>
                     <figcaption>+212-279-1363</figcaption>
                 </figure>
