--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page will have all the contact information about the Roaring Rapid Rafting">
+    <meta name="description" content=" The Roaring Rapids Rafting Contact Us page provides a variety of contacting methods to reserve a trip.">
     <meta name="author" content="Helaman Carrillo">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>Roaring Rapids Rafting Contact Us</title>
@@ -20,35 +20,39 @@
     </header>
     <main>
 
-        <div><h2 id="title2">Remain In Contact</h2></div>
+        <div><h1 id="title2">Remain In Contact</h1></div>
 
         <div class="casi">
 
             <article id="house">
                 <figure>
-                    <img src="images/housesymbol.jpg" alt="House Symbol" width="60"><br><br><br><br>
+                    <img src="images/housesymbol.jpg" alt="House Symbol" width="60">
+                    <h4>Address</h4><br><br><br><br>
                     <figcaption> 5961 State Route 97 Narrowsburg, NY</figcaption>
                 </figure>
             </article>
 
             <article id="phoone">
                 <figure>
-                    <img src="images/phone.jpg" alt="Phone Symbol" width="78"><br><br><br>
+                    <img src="images/phone.jpg" alt="Phone Symbol" width="60">
+                    <h4>Phone</h4><br><br><br><br>
                     <figcaption>+212-226-3966</figcaption>
-                    <figcaption>+212-279-1363</figcaption>
+                    
                 </figure>
             </article>
 
             <article id="emaill">
                 <figure>
-                    <img src="images/email3.png" alt="Email Symbol" width="60"><br><br><br><br>
+                    <img src="images/email3.png" alt="Email Symbol" width="60">
+                    <h4>Email</h4><br><br><br><br>
                     <figcaption>rapids12@gmail.com  </figcaption>
                 </figure>
             </article>
 
             <article id="locaa">
                 <figure>
-                    <img src="images/location.jpg" alt="Location Symbol" width="60"><br>
+                    <img src="images/location.jpg" alt="Location Symbol" width="60">
+                    <h4>GPS Location</h4><br>
                     <figcaption><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19760.66384649449!2d-75.01910834887975!3d41.58911822571433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89db56ca4c463685%3A0x66ac25acbe737b56!2sLander&#39;s%20River%20Trips!5e0!3m2!1ses!2shn!4v1697669335193!5m2!1ses!2shn" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></figcaption>
                 </figure>
             </article>  
@@ -62,24 +66,24 @@
             <article class="angie">
                 <figure>
                     <img src="images/manager123.png" alt="Director Manager" width="200">
-                    <figcaption>Angie Velora</figcaption><br>
-                    <figcaption><strong>Director Manager</strong></figcaption>
+                    <h4>Angie Velora</h4>
+                    <figcaption>Director Manager</figcaption><!--<figcaption><strong>Director Manager</strong></figcaption>-->
                 </figure>
             </article>
 
             <article>
                 <figure>
                     <img src="images/ceo1.jpg" alt="CEO" width="200">
-                    <figcaption>Preston Aguilar</figcaption><br>
-                    <figcaption><strong>CEO</strong></figcaption>
+                    <h4>Preston Aguilar</h4>
+                    <figcaption>CEO</figcaption><!--<figcaption><strong>CEO</strong></figcaption>-->
                 </figure>
             </article>
 
             <article>
                 <figure class="joshua">
                     <img src="images/otherposition.jpg" alt="Creative Director" width="200">
-                    <figcaption>Joshua Benz</figcaption><br>
-                    <figcaption><strong>Creative Director</strong></figcaption>
+                    <h4>Joshua Benz</h4>
+                    <figcaption>Creative Director</figcaption><!--<figcaption><strong>Creative Director</strong></figcaption>-->
                 </figure>
             </article>
 
@@ -198,7 +202,9 @@
                 <img src="images/circlelogoig.avif" alt="Instagram" width="52">
             </a>
         </nav>
-        <a href="https://app.moqups.com/gkl9ej6BhGznCuu356SW9zrqsOkjsLjs/edit/page/a774936d3">Wireframe</a>
+        <a href="images/contactuswireframe.png"> 
+           Contact Us Wireframe
+          </a> 
     </footer>
 </body>
 </html>
