--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/rafting.css">
     <title>Roaring Rapids Rafting Home</title>
 </head>
-<body>
+<body> <!-- huh-->
 
     <header>
         <img src="images/rafinglogo.png" alt="Rafting Logo">
@@ -66,7 +66,7 @@
             </div>
 
             <div class="homebutt">
-                <input class="homereal" type="button" value="EXPLORE NOW" onclick="location.href='http://127.0.0.1:5500/wwr/trips.html'">
+                <input class="homereal" type="button" value="EXPLORE NOW" onclick="location.href='https://helamancarrillo.github.io/wdd130/wwr/trips.html'">
             </div>
 
         </div>
