--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -98,7 +98,7 @@
                     </table>
                     <h2 class="additionaltitle">Additional Financing by</h2>
                     <img src="images/banks.png" alt="banks" width="300" height="200" ><br><br> <!--  jj  http://127.0.0.1:5500/wwr/contact.html-->
-                    <input class="tripbutton" type="button" value="RESERVE NOW" onclick="location.href='../contact.html'">
+                    <input class="tripbutton" type="button" value="RESERVE NOW" onclick="location.href='https://helamancarrillo.github.io/wdd130/wwr/contact.html'">
                     
                 </div>
             
